--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "recompose": "^0.30.0",
     "yarn": "^1.22.19"
   },
